Change title to be more specific

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         content="avenegers, marvel, ultron, age of unltron, spiderman, hulk, black widow, ironman, captain america, nick fury, thor, movie, marvel movies">
     <link rel="shortcut icon" href="assets/images/favicon.webp" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Marvel quiz</title>
-</head>personality
+    <title>Marvel personality quiz</title>
+
+</head>
 </html>
