Add small intro & how to play game to start page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -10,6 +10,28 @@
     <link rel="shortcut icon" href="assets/images/favicon.webp" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Marvel personality quiz</title>
-
 </head>
+
+<body>
+    <main class="container">
+
+        <section id="logo">
+            <h1 id="logo">Which Marvel hero are you?</h1>
+        </section>
+
+        <section id="intro">
+            <p class="paragraph">Want to find out if your personality is the same as your favourite superhero? </p>
+            <p class="paragraph">If your eagar to know, follow along with this quiz!</p>
+
+            <br>
+
+            <h4 id="about-game">Unsure of how to play? Read below: </h4>
+             <p class="paragraph">There will be multiple questions with four different answers, you click with answer
+                is best suited to you. Once you have completed and answered all questions.</p>
+                <br>
+                
+                <h3> Click the start button to see which superhero YOUR most like!</h3>
+        </section>
+    </main>
+</body>
 </html>
