--- a/index.html
+++ b/index.html
@@ -29,9 +29,18 @@
              <p class="paragraph">There will be multiple questions with four different answers, you click with answer
                 is best suited to you. Once you have completed and answered all questions.</p>
                 <br>
-                
+
                 <h3> Click the start button to see which superhero YOUR most like!</h3>
         </section>
+
+        <section id="start">
+            <button id="start-button"> START QUIZ </button>
+        </section>
+
+        <section id="game-area" class="hide">
+            Let's Begin!
+        </section>
+        
     </main>
 </body>
 </html>
