--- a/index.html
+++ b/index.html
@@ -40,7 +40,31 @@
         <section id="game-area" class="hide">
             Let's Begin!
         </section>
-        
+
     </main>
+
+    <footer>
+        <ul class="socials">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener">
+                    <span class="icon-center"><i class="fa-brands fa-square-facebook"></i>Share</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/" target="_blank" rel="noopener">
+                    <span class="icon-center"><i class="fa-brands fa-square-twitter"></i>Share</span>
+                </a>
+             </li>
+                <li>
+                    <a href="https://www.linkedin.com/" target="_blank" rel="noopener">
+                        <span class="icon-center"><i class="fa-brands fa-linkedin"></i>Share</span>
+                    </a>
+                </li>
+        </ul>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/552664b17c.js" crossorigin="anonymous"></script>
+    <script src="assets/js/script.js"></script>
+    
 </body>
 </html>
