Add breaks inbetween paragraphs for readablity

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
 
             <br>
 
-            <h4 id="about-game">Unsure of how to play? Read below: </h4>
-             <p class="paragraph">There will be multiple questions with four different answers, you click with answer
-                is best suited to you. Once you have completed and answered all questions.</p>
+            <h4 id="about-game">Unsure of how to play? 
                 <br>
+                 Read below: </h4>
+             <p class="paragraph">There will be multiple questions with four different answers, you click with answer
+                is best suited to you.
+                <br>
+                Once you have completed and answered all questions.</p>
 
                 <h3> Click the start button to see which superhero YOUR most like!</h3>
         </section>
@@ -65,6 +68,6 @@
 
     <script src="https://kit.fontawesome.com/552664b17c.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
-    
+
 </body>
 </html>
