Add in br between parags nd headings 4 readability

--- a/index.html
+++ b/index.html
@@ -28,10 +28,17 @@
             <h4 id="about-game">Unsure of how to play? 
                 <br>
                  Read below: </h4>
-             <p class="paragraph">There will be multiple questions with four different answers, you click with answer
-                is best suited to you.
+
+                 <br>
+
+             <p class="paragraph">There will be multiple questions with four different answers.
+                <br> You then click which answers are best suited to you.
+
                 <br>
+
                 Once you have completed and answered all questions.</p>
+
+                <br>
 
                 <h3> Click the start button to see which superhero YOUR most like!</h3>
         </section>
