Add restart button for users

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             Let's Begin!
         </section>
 
+        <button id="restart-button">Play again</button>
     </main>
 
     <footer>
