Add class hide to questions and restart btn

--- a/index.html
+++ b/index.html
@@ -48,10 +48,15 @@
         </section>
 
         <section id="game-area" class="hide">
-            Let's Begin!
+            <span id="question"></span>
+            <br>
+            <button class="btn"></button>
+            <button class="btn"></button>
+            <button class="btn"></button>
+            <button class="btn"></button>
         </section>
 
-        <button id="restart-button">Play again</button>
+        <button id="restart-button" class="hide">Play again</button>
     </main>
 
     <footer>
