Change id to game not game-area in html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button id="start-button"> START QUIZ </button>
         </section>
 
-        <section id="game-area" class="hide">
+        <section id="game" class="hide">
             <span id="question"></span>
             <br>
             <button class="btn"></button>
