--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/552664b17c.js" crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js" defer ></script>
 
 </body>
 </html>
