--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <button class="btn"></button>
         </section>
 
+        <p id="final-result" class="hide"></p>
         <button id="restart-button" class="hide">Play again</button>
     </main>
 
