Add logo image and delete text logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="container">
 
         <section id="logo">
-            <h1 id="logo">Which Marvel hero are you?</h1>
+            <img src="assets/images/logo.png" alt="avengers logo">
         </section>
 
         <section id="intro">
@@ -40,7 +40,9 @@
 
                 <br>
 
-                <h3> Click the start button to see which superhero YOUR most like!</h3>
+                <h3> Which member of the Avengers are you most like!</h3>
+                <br>
+                <h3>Find out now!</h3>
         </section>
 
         <section id="start">
