Add h5 to change size of text on read below

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 
             <br>
 
-            <h4 id="about-game">Unsure of how to play? 
+            <h4 id="about-game">Unsure of how to play? </h4>
                 <br>
-                 Read below: </h4>
+                <h5>Read below:</h5>
+                 
 
                  <br>
 
@@ -49,6 +50,7 @@
             <button id="start-button"> START QUIZ </button>
         </section>
 
+        <div id="qbuttons">
         <section id="game" class="hide">
             <span id="question"></span>
             <br>
@@ -58,6 +60,7 @@
             <button class="btn"></button>
             <button class="btn"></button>
         </section>
+        </div>
 
         <p id="final-result" class="hide"></p>
         <button id="restart-button" class="hide">Play again</button>
