Update intro text to be more specific

--- a/index.html
+++ b/index.html
@@ -20,30 +20,24 @@
         </section>
 
         <section id="intro">
-            <p class="paragraph">Want to find out if your personality is the same as your favourite superhero? </p>
-            <p class="paragraph">If your eagar to know, follow along with this quiz!</p>
+                <!--<p class="paragraph">Click start quiz find out if your personality is the same as your 
+                <br>
+                 favourite superhero? </p>-->
+                 <ul id="intro">
+                    <li class="li1"> - Click start quiz to find out if your personality is the same as your 
+                        <br>
+                          favourite superhero? </li>
+                    <li class="li2"> - Blast through 12 multiple choice questions. </li>
+                    <li class="li3"> - Each personality question, will bring you one step closer
+                        <br>
+                         to your superhero match!
+                    </li>
+                 </ul>
+            <!--<p class="paragraph">If your eagar to know, follow along with this quiz!</p>-->
+
 
             <br>
-
-            <h4 id="about-game">Unsure of how to play? </h4>
-                <br>
-                <h5>Read below:</h5>
-                 
-
-                 <br>
-
-             <p class="paragraph">There will be multiple questions with four different answers.
-                <br> You then click which answers are best suited to you.
-
-                <br>
-
-                Once you have completed and answered all questions.</p>
-
-                <br>
-
-                <h3> Which member of the Avengers are you most like!</h3>
-                <br>
-                <h3>Find out now!</h3>
+                <h3 id="about-game">LET'S GO!</h3>
         </section>
 
         <section id="start">
