Fix html validation errors

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=deivce-width, initial-scale=0.1">
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="personality quiz to see which avenger superhero your personality matches">
     <meta name="keywords"
         content="avenegers, marvel, ultron, age of unltron, spiderman, hulk, black widow, ironman, captain america, nick fury, thor, movie, marvel movies">
@@ -20,10 +20,7 @@
         </section>
 
         <section id="intro">
-            <!--<p class="paragraph">Click start quiz find out if your personality is the same as your 
-                <br>
-                 favourite superhero? </p>-->
-            <ul id="intro">
+            <ul>
                 <li class="li1"> - Click start quiz to find out if your personality is the same as your
                     <br>
                     favourite superhero? </li>
@@ -33,7 +30,6 @@
                     to your superhero match!
                 </li>
             </ul>
-            <!--<p class="paragraph">If your eagar to know, follow along with this quiz!</p>-->
 
 
             <br>
@@ -54,8 +50,8 @@
                 <br>
                 <button class="btn"></button>
                 <button class="btn"></button>
+            </div>
         </section>
-        </div>
 
         <p id="final-result" class="hide"></p>
         <button id="restart-button" class="hide">Play again</button>
