Remove text from social icons

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
         <ul class="socials">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener">
-                    <span class="icon-center"><i class="fa-brands fa-square-facebook"></i>Share</span>
+                    <span class="icon-center"><i class="fa-brands fa-square-facebook"></i></span>
                 </a>
             </li>
             <li>
                 <a href="https://twitter.com/" target="_blank" rel="noopener">
-                    <span class="icon-center"><i class="fa-brands fa-square-twitter"></i>Share</span>
+                    <span class="icon-center"><i class="fa-brands fa-square-twitter"></i></span>
                 </a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/" target="_blank" rel="noopener">
-                    <span class="icon-center"><i class="fa-brands fa-linkedin"></i>Share</span>
+                    <span class="icon-center"><i class="fa-brands fa-linkedin"></i></span>
                 </a>
             </li>
         </ul>
