Fix grammer mistake in intro

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
         <!-- intro -->
         <section id="intro">
             <ul>
-                <li class="li1"> Click start quiz to find out if your personality is the same as your favourite superhero? </li>
+                <li class="li1"> Click start quiz to find out if your personality is the same as your favourite superhero! </li>
                 <li class="li2"> Blast through 12 multiple choice questions. </li>
-                <li class="li3"> Each personality question, will bring you one step closer to your superhero match!
-                </li>
+                <li class="li3"> Each personality question, will bring you one step closer to your superhero match!</li>
             </ul>
 
 
