Fix spelling of device width in html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=deivce-width, initial-scale=0.1">
+    <meta name="viewport" content="width=device-width, initial-scale=0.1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="personality quiz to see which avenger superhero your personality matches">
     <meta name="keywords"
